--- a/page/tabBar/homePages/attendanceProject/attendanceProject.wxml
+++ b/page/tabBar/homePages/attendanceProject/attendanceProject.wxml
@@ -4,7 +4,7 @@
     <view class='header_title'>
       <view>
         <text class='fa color_1 fa-calendar-check-o'></text> 
-        <view>正常:{{titleData.normalNumStr}}</view>
+        <view>正常:{{titleData.normalNum}}</view>
       </view>
       <view>
         <text class='fa color_2 fa-calendar-times-o'></text>
@@ -37,7 +37,7 @@
       <view class='tab_content'>中</view>
       <view class='tab_content'>晚</view>
     </view>
-    <view class='com_tab_title' bindtap='goCard' wx:for="{{tabData.page.t}}" wx:item="item" wx:key="">
+    <view class='com_tab_title' bindtap='goCard' wx:for="{{tabData.t}}" wx:item="item" wx:key="">
       <view class='date tab_content'>{{item.clockTime}}</view>
       <view class='tab_content'>{{item.clockStatus}}</view>
       <view class='tab_content'>{{item.morning}}</view>
