--- a/page/tabBar/homePages/vipSeeWageDetails/vipSeeWageDetails.wxml
+++ b/page/tabBar/homePages/vipSeeWageDetails/vipSeeWageDetails.wxml
@@ -2,19 +2,19 @@
   <view class='header border_top bg_fff'>
    
     <view class='border_bottom'>
-      <view class='select_header'>
+      <view class='work_select_header'>
         <view bindtap='peojectTap'>
-          <text class='{{selectStatus == 1 ?"add_class":""}}'>项目</text>
+          <text class='{{selectStatus == 1 ?"add_class":""}}'>月份</text>
           <image wx:if="{{selectStatus == 1}}" class='tan_top' src='/image/top_tan.png'></image>
           <image wx:else class='tan' src='/image/tan.png'></image>
         </view>
         <view bindtap='companyTap'>
-          <text class='{{selectStatus == 2 ?"add_class":""}}'>劳务公司</text>
+          <text class='{{selectStatus == 2 ?"add_class":""}}'>班组人员选择</text>
           <image wx:if="{{selectStatus == 2}}" class='tan_top' src='/image/top_tan.png'></image>
           <image wx:else class='tan' src='/image/tan.png'></image>
         </view>
         <view bindtap='classTap'>
-          <text class='{{selectStatus == 3 ?"add_class":""}}'>班组</text>
+          <text class='{{selectStatus == 3 ?"add_class":""}}'>状态</text>
           <image wx:if="{{selectStatus == 3}}" class='tan_top' src='/image/top_tan.png'></image>
           <image wx:else class='tan' src='/image/tan.png'></image>
         </view>
@@ -52,23 +52,33 @@
   <view wx:else class='content bg_fff'>
     <view class='com_width list_box'>
       <view class='list'>
-        <text class='list_title'>姓名:</text>
-        <text class='list_data'>李先生</text>
+        <text class='list_title'>项目名称：</text>
+        <text class='list_data'></text>
       </view>
 
       <view class='list'>
-        <text class='list_title'>姓名:</text>
-        <text class='list_data'>李先生</text>
+        <text class='list_title'>劳务公司：</text>
+        <text class='list_data'></text>
       </view>
 
       <view class='list'>
-        <text class='list_title'>姓名:</text>
-        <text class='list_data'>李先生</text>
+        <text class='list_title'>班组：</text>
+        <text class='list_data'></text>
       </view>
 
       <view class='list'>
-        <text class='list_title'>姓名:</text>
-        <text class='list_data'>李先生</text>
+        <text class='list_title'>应发工资：</text>
+        <text class='list_data'></text>
+      </view>
+
+      <view class='list'>
+        <text class='list_title'>扣款：</text>
+        <text class='list_data'></text>
+      </view>
+
+      <view class='list'>
+        <text class='list_title'>累计实发工资：</text>
+        <text class='list_data'></text>
       </view>
     </view>
 
@@ -76,7 +86,7 @@
 
   <view class='vip_title'>班组明细</view>
   <!-- 表格 -->
-  <view>
+  <view bindtap='goWageDetails'>
     <view class='com_tab_title tab_title'>
       <view class='first_checkbox'>
       <label class="checkboxs"> 
