--- a/page/tabBar/minePages/personData/personData.wxml
+++ b/page/tabBar/minePages/personData/personData.wxml
@@ -12,25 +12,25 @@
       <view>文化程度</view>
       <view class='display_flex com_rigth_view'>
         <text class='color_gray'>本科</text>
-        <image src='/image/right_j.png'></image>
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
   </view>
 
-  <view class='content com_list bg_fff'>
+  <view class='content com_list bg_fff' bindtap='go_changePhone'>
     <view class='display_flex list_tab'>
       <view>手机号</view>
       <view class='display_flex com_rigth_view'>
         <text class='color_gray'>18801287297</text>
-        <image src='/image/right_j.png'></image>
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
 
-    <view class='display_flex list_tab'>
+    <view class='display_flex list_tab' bindtap='go_bindBank'>
       <view>银行卡</view>
       <view class='display_flex com_rigth_view'>
-        <text class='color_gray'>建设银行11120001982903198312</text>
-        <image src='/image/right_j.png'></image>
+        <!-- <text class='color_gray'>建设银行11120001982903198312</text> -->
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
 
@@ -38,7 +38,7 @@
       <view>确认密码</view>
       <view class='display_flex com_rigth_view'>
         <text class='color_gray'>*******</text>
-        <image src='/image/right_j.png'></image>
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
 
@@ -46,7 +46,7 @@
       <view>主要技能</view>
       <view class='display_flex com_rigth_view'>
         <text class='color_gray'>某技能</text>
-        <image src='/image/right_j.png'></image>
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
 
@@ -54,7 +54,7 @@
       <view>技能等级</view>
       <view class='display_flex com_rigth_view'>
         <text class='color_gray'>3级</text>
-        <image src='/image/right_j.png'></image>
+        <text class='fa add_gray fa-chevron-right'></text>
       </view>
     </view>
 
